[project]
name = "gcs-atomic-lock"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "minthem", email = "114272528+minthem@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hatching>=0.0.1",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.isort]
profile = 'black'
multi_line_output = 3
